# FractalsRenderer

./: .gitignore  README.md
.github/workflows/: win-release.yml
Mandelbrot/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  Mandelbrot.pro  complex.cpp  complex.h  imagerender.cpp  imagerender.h  label.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclassscene.cpp  myclassscene.h  ui_mainwindow.h
Mandelbrot/Mandelbrot.app/Contents/MacOS/: Mandelbrot
Mandelbrot/debug/: moc_mainwindow.cpp
Mondelbrot/: Mondelbrot.pro  mainwindow.ui
Win:Mac application/Mandelbrot.app/Contents/: Info.plist
Win:Mac application/Mandelbrot.app/Contents/MacOS/: Mandelbrot
build-Mandelbrot-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Mandelbrot-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
